<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imgFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/facebook"
        android:contentDescription="@string/go_to_facebook"
        android:paddingEnd="50dp"
        app:layout_constraintEnd_toStartOf="@+id/imgX"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/go_to_x"
        android:src="@drawable/x"
        android:paddingEnd="50dp"
        app:layout_constraintEnd_toStartOf="@+id/imgGoogle"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/go_to_google"
        android:src="@drawable/google_mas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
