<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
       >

        <!-- Icono de retroceso -->
        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_50"
            android:layout_gravity="start"
            android:contentDescription="@string/back_button_description"/>

        <!-- Título de la página -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_perfil"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <!-- Imagen de perfil con icono de edición -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avtar"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_image"
                android:scaleType="centerCrop"
                android:layout_margin="8dp"
                />

            <ImageView
                android:id="@+id/editIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/editar"
                android:layout_gravity="bottom|end"
          android:background="@color/white"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/edit_profile_image" />
        </FrameLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/name"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/res_input_color"
            app:endIconContentDescription="@string/content_description_end_icon_check"
            app:endIconMode="custom"
            app:hintTextColor="@color/res_input_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/res_input_color"
            app:endIconContentDescription="@string/content_description_end_icon_check"
            app:endIconMode="custom"
            app:hintTextColor="@color/res_input_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/phone"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/res_input_color"
            app:endIconContentDescription="@string/content_description_end_icon_check"
            app:endIconMode="custom"
            app:hintTextColor="@color/res_input_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/country_dropdown_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Select Country"
            app:hintTextColor="@color/gray"
            android:layout_marginTop="30dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
                >
            <androidx.appcompat.widget.AppCompatSpinner

            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/countries"
                android:popupBackground="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/red"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"/>

    </LinearLayout>

</FrameLayout>