<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragments.Login"
    android:transitionName="shared_element_container">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">
    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:text="@string/sign_in"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:endIconMode="custom"
            app:boxStrokeColor="@color/res_input_color"
            app:hintTextColor="@color/res_input_color"
            app:endIconContentDescription="@string/content_description_end_icon_check">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/red"
            app:boxStrokeColor="@color/res_input_color"
            app:hintTextColor="@color/res_input_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/singIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:gravity="end"
                android:text="@string/don_t_have_a_account"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/singUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="end"
                android:text="@string/sign_up"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>

     <include layout="@layout/social_networks"/>
    </LinearLayout>
    </ScrollView>
</FrameLayout>
